--- a/src/App.css
+++ b/src/App.css
@@ -20,14 +20,14 @@
     transition: color 2s ease;
 }
 .personalWeb-lineL {
-    transition: color 3s ease;
+    transition: background-color 0.5s ease;
     margin-top: 10px;
     background-color: #4B6A9B;
     width: 100%;
     height: 2px;
 }
 .personalWeb-lineD {
-    transition: color 2s ease;
+    transition: background-color 0.5s ease;
     margin-top: 10px;
     background-color: #ffffff;
     width: 100%;
@@ -59,7 +59,7 @@
     box-shadow: 0px 16px 30px -10px #4660BB33;
     color: #ffffff;
 }.light-mode {
-    transition: background-color 0.5s ease;
+    transition: background-color 0.5s ease-out;
     background-color: #141d2f;
     color: #000000; 
 }
